--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "npm run build && webpack-dev-server --port=8000"
+    "dev": "webpack-dev-server --port=8000 --inline --content-base ./build"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "raw-loader": "^0.5.1",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^2.11.0"
+    "webpack-dev-server": "^3.0.0-alpha6"
   },
   "dependencies": {
     "phaser": "^3.3.0"
